Fix the issue about scrollbar overlapped by contents

--- a/src/components/GameView/CharactersView.module.css
+++ b/src/components/GameView/CharactersView.module.css
@@ -1,8 +1,5 @@
 .container {
   width: 100%;
-  height: 100%;
-  overflow-x: hidden;
-  overflow-y: auto;
   text-align: center;
   padding-bottom: 50px;
   box-sizing: border-box;
