--- a/src/components/LobbyView/index.module.css
+++ b/src/components/LobbyView/index.module.css
@@ -1,8 +1,6 @@
 .container {
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
-  overflow-y: auto;
   box-sizing: border-box;
   vertical-align: middle;
 }
