--- a/src/index.css
+++ b/src/index.css
@@ -13,17 +13,11 @@ body {
   background-color: #1c1c1c;
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  flex: 1;
 }
 
 #root {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  flex: 1;
 }
 
 input {
